<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_new"
        android:id="@+id/addnew"
        android:layout_gravity="start"
        android:singleLine="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addmemo"
        android:id="@+id/addNewMemo"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtodo"
        android:id="@+id/addNewTodo"
        android:layout_gravity="center" />

</LinearLayout>