<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/todos"
        android:id="@+id/titletextViewTodo"
        android:layout_gravity="start"
        android:singleLine="true"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/todoprio"
        android:id="@+id/titletextTodoPrio"
        android:layout_gravity="start"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:ems="2"
        android:id="@+id/prio"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/newTodo"
        android:layout_gravity="center_horizontal"
        android:editable="true"
        android:hint="@string/hinttodo"
        android:layout_weight="9"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/savebutton"
        android:layout_gravity="center_horizontal" />
</LinearLayout>